src/App.css
/******************** GENERAL CSS SETTINGS *******************/
.main-interface{
    width: 100%;
    height: auto;
    min-height: 100vh;
    /*overflow: hidden;*/
    background: #000;

    @media (max-width: 1000px) {
        width: 100%;
        height: fit-content;
        padding-bottom: 10px;
    }

}
::-webkit-scrollbar {
    width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
    background: rgb(94, 92, 92);
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: rgb(147, 145, 145);

}

/*!* Handle on hover *!*/
/*::-webkit-scrollbar-thumb:hover {*/
/*    background: rgb(147, 145, 145);*/
/*}*/

/********************  NAV-BAR CSS ********************/

.nav-bar{

    background: #000000;
    height: auto;
    align-self: stretch;
    display: flex;
    border-right: white solid 2px;
    color: white;
    flex-direction: column;
    width: 150px;



    @media (max-width: 1000px) {
        flex-direction: row;
        width: 100%;
        justify-content: center;

        position: fixed;
        bottom: 0;
        z-index: 999;
        height: 70px;



    }

}


.nav-bar button{

    padding: 10px;
    padding-bottom: 0px;
    width: 100%;
    white-space: nowrap;
    display: flex;
    justify-content: center;
    align-items: center;

    @media (max-width: 1000px) {
        height: 100%;


    }
}

.nav-bar button:hover:not(.selected){

    background: rgba(255, 255, 255, 0.2);
    color: white;
}

.management-staff-tab,.development-tab{
    display: flex;
    flex-direction: column;
    height: 100%;



}

/******************** STAFF MANAGEMENT TAB HEADER CSS *******************/

.staff-management-tab-header,.development-tab-header{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    background: #f4f3f3;
    padding-inline: 10px;
    padding-top: 10px;
    height: 130px;
    width: 100%;
    padding-right: 30px;



}

.tab-title-display{
    display: flex;
    justify-content: space-between;
    margin-bottom: 50px;
}

.tab-title-display h1{

    background-color: black;
    color: white;
    padding: 5px;
    padding-left: 2px;
    padding-right: 30px;
    display: inline-block;
    font-size: 2em;
    height: fit-content;


}

/******************** STAFF MANAGEMENT TAB BODY CSS *******************/

.staff-management-tab-body,.development-tab-body{

    border-top: 2px solid #000000;
    position: relative;
    height: 100%;


}


/******************** STAFF MANAGEMENT DEPARTMENT TAB LIST CSS *******************/
.staff-management-department-tab-list,.development-type-tab-list{
    display: flex;
    flex-direction: row;
    gap: 0;
    position: absolute;
    bottom: 100%;
    padding-left: 5px;


}
.staff-management-department-tab-list li button,.development-type-tab-list li button{
    border: 2px solid black;
    border-top-left-radius: 1px;
    border-top-right-radius: 1px;
    padding: 5px;
    border-bottom: none;
    border-left: none;


}
.staff-management-department-tab-list li:first-child,.development-type-tab-list li:first-child{

    border-left: 2px solid black;

}

/******************** STAFF DETAILS LIST CSS *******************/
.main-management-container,.main-development-container{

    height: 100%;
    background: black;
    padding-top: 1px;
    @media (max-width: 1000px) {
        padding-bottom: 100px;
    }
}

.staff-Details{
    display: flex;
    justify-content: space-between;
    width: 100%;
    padding-inline: 100px;
    margin-top: 10px;
    gap: 10px;
    /*background-color: #ea2e2e;*/
    @media (max-width: 1000px) {
        padding-inline: 40px;
        flex-wrap: wrap;


    }





}


/******************** STAFF MEMBERS BOX LIST CSS *******************/

.members-list-view{
    @media(max-width: 1000px) {
        flex-grow: 1;
    }
}

.members-list-box{
    height: 300px;
    width: 400px;
    display: flex;
    flex-direction: column;
    @media(max-width: 1000px){
        height: 200px;
        width: 100%;
        flex-grow: 1;
    }


}
.members-list{
    background: #e2e2dd60;
    overflow-y: auto;
    height:100%;
    flex:1;
    width: 100%;
    border: 2px solid #e2e2dd90;
    border-top: none;

}
.members-list-box-heading{
    color: white;
    display: flex;
    justify-content: center;
    width: 100%;
    padding-block: 5px;

    border: 2px solid #e2e2dd90;


}
.member-list-names{
    padding-block: 2px;
    border-bottom:2px solid #e2e2dd90;
    width: 100%;
    display: flex;
    padding: 0;

}

/*.member-list-names:last-child{*/
/*    border-bottom: none;*/

/*}*/

.member-list-names button{
    flex: 1;
    height: 100%;
    width: 100%;
    border: none;
    margin: 0;
    padding: 0;
    text-align: left;
    padding-left: 10px;

}


.member-list-names:not(.selected){


    color: white;


}


.member-list-names:not(.selected):hover {

    background: rgba(213, 204, 218, 0.5);
    color: black;


}


/******************** MEMBERS STATS BOX CSS *******************/

.members-stats-box{
    min-width:50px ;
    height: fit-content;

    flex-grow: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap:10px;
    align-self: center;
    /*background-color: #75f2f6;*/
    flex-grow: 1;
    /*@media (max-width: 1000px) {*/
    /*    min-width:100% ;*/

    /*}*/
    /*@media (max-width: 565px) {*/
    /*    min-width:60% ;*/

    /*}*/


}
/******************** SKILL PROGRESS BAR CSS *******************/

.skill-progress-bars{
    width: 100%;
    display: flex;
    flex-direction: column;
    gap:5px;


}
.progress-bar-label{
    white-space: nowrap;
    padding-left: 10px;
}
.life-label{
    color: white;
    padding-block: 7px;
}

.base-ap-label{
    font-size: 10px;

}
.base-ap-value{
    font-size: 25px;
}
.base-ap{
    color: white;
    background: #b90005;
    padding-right:15px;
    padding-left:5px ;
}
.life{
    flex: 1;
}
.life-and-base-ap{
    display: flex;
    gap:5px;
}
/* ... */

